[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngrok-quick"
version = "1.0.0"
description = "A simple CLI tool intended for containerized use to quickly start ngrok tunnels for local development"
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
    "ngrok>=1.0.0",
    "click>=8.1.7",
]

[project.scripts]
ngrok-quick = "ngrok_quick.__main__:cli"

[tool.setuptools.packages.find]
include = ["ngrok_quick*"]
